--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@ entries similar to the following:</p>
 
 <code><pre>
 [09-Jul-2013 14:17:42] WARNING: [pool www] child 18868 exited with code 70 after 211.761716 seconds from start
-</code></pre>
+</pre></code>
 
 <p>I managed to reproduce this on PHP 5.4.13 and 5.4.14 and nginx 1.2.7 and 1.2.8. Nothing was appearing in the PHP
 error log or syslog. There was a related entry in the nginx error log:</p>
 
-<code><pre>recv() failed (104: Connection reset by peer) while reading response header from upstream</code></pre>
+<code><pre>recv() failed (104: Connection reset by peer) while reading response header from upstream</pre></code>
 
 <p>This actually ended up being caused by an <code>ini_set('memory_limit', '16M')</code>, which when removed and
 relying on the <code>128M</code> set by <code>php.ini</code> instead resolved the issue.</p>
@@ -390,7 +390,7 @@ volume group, only the physical volume itself.</p>
 <!-- 2013-05-18 -->
 <article id="the-5-minute-lamp-stack">
 <h2><a href="#the-5-minute-lamp-stack">§</a>
-    The 5-minute LAMP Stack</a></h2>
+    The 5-minute LAMP Stack</h2>
 
 <p>With the <a href="http://www.debian.org/News/2013/20130504">release</a> of
 Debian 7.0 "Wheezy", PHP 5.4 is available though <code>apt-get</code> from the word go.
@@ -487,7 +487,7 @@ server {
 </pre></code>
 
 <p>Finally, symlink your configuration file and reload NGINX:</p>
-<codde><pre>
+<code><pre>
 ln -s /etc/nginx/sites-available/your-domain.com /etc/nginx/sites-enabled/your-domain.com
 service nginx reload
 </pre></code>
@@ -557,7 +557,7 @@ modprobe 8021q &amp;&amp; echo '8021q' &gt;&gt; /etc/modules
 
 <code><pre>
 apt-get install vlan
-</code></pre>
+</pre></code>
 
 <p>Setup the /etc/network/interfaces with as many of the above VLANs as you
 require for the dom0 and domUs, here's mine (shortened for display):</p>
