Always show toc scrollbar

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ kbd, code {font-size:1em; font-family:'Andale Mono','Droid Sans Mono','Courier N
 p code {font-size:0.9em; line-height:1.6em;}
 abbr {border-bottom:1px dashed #807e71; cursor:help}
 
-#toc {letter-spacing:0.05em; opacity:0.9; padding:0; height:7.4em; overflow:hidden}
-#toc:hover {overflow:auto}
+#toc {letter-spacing:0.05em; opacity:0.9; padding:0; height:7.4em; overflow:auto}
 #toc a {display:block; padding:0 0 0 16px; line-height:2.25em; border-top:1px solid #b2a787}
 #toc a:hover {background-color:#b2a787; opacity:0.6}
 </style>
