Added link to skl/android-training repo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>skl</title>
 
+<meta name="author" content="Stephen Karl Lang">
 <meta name="viewport" content="width-device-width, initial-scale=1">
 
 <style type="text/css">
@@ -152,6 +153,9 @@ adb install -r bin/MyFirstApp-debug.apk
     <li>Cannot find symbol SuppressLint</li>
     <li>Cannot find symbol TextView</li>
 </ul>
+
+<p>I've created the Git repository <a href="https://github.com/skl/android-training">skl/android-training</a> to show
+the project in it's entirety.</p>
 
 <a href="#">Back to top</a>
 </article>
