Added contribute link to footer

--- a/index.html
+++ b/index.html
@@ -767,6 +767,10 @@ for too long.</p>
 <a href="#">Back to top</a>
 </article>
 
-<footer>Stephen Karl Lang <a href="http://creativecommons.org/licenses/by/3.0/">CC BY</a></footer>
+<footer>
+    <a href="https://github.com/skl/skl.me" title="Spotted a mistake or want to contribute in another way?
+        Fork the repo and send me a pull request!">Contribute</a> |
+    Stephen Karl Lang <a href="http://creativecommons.org/licenses/by/3.0/">CC BY</a>
+</footer>
 </body>
 </html>
